JumpScript/tests/baselines/reference/parserVariableDeclaration5.errors.txt
tests/cases/conformance/parser/ecmascript5/VariableDeclarations/parserVariableDeclaration5.jump(1,6): error TS1009: Trailing comma not allowed.


==== tests/cases/conformance/parser/ecmascript5/VariableDeclarations/parserVariableDeclaration5.jump (1 errors) ====
    var a,
         ~
!!! error TS1009: Trailing comma not allowed.